[gd_scene load_steps=10 format=3 uid="uid://cfmu0e1hdvitn"]

[ext_resource type="Script" uid="uid://dvsk6p4j2ls0s" path="res://src/entity/gateway.gd" id="1_s454h"]
[ext_resource type="Texture2D" uid="uid://t4dr1lrnw325" path="res://textures/world/essence2.png" id="3_j4i8n"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wnbqf"]
height = 40.0
radius = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dlkrj"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(1.25, 1.25, 1.25, 1)
albedo_texture = ExtResource("3_j4i8n")
uv1_offset = Vector3(0, 1105.19, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_bd4ot"]
top_radius = 0.0
bottom_radius = 4.0
height = 40.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eprsi"]
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.340505, 0.228268, 0.400052, 1)
uv1_offset = Vector3(0, 552.594, 0)
distance_fade_min_distance = 120.0
distance_fade_max_distance = 80.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ocwtt"]
lightmap_size_hint = Vector2i(64, 274)
top_radius = 0.0
bottom_radius = 5.0
height = 42.0

[sub_resource type="SphereMesh" id="SphereMesh_hec52"]
material = SubResource("StandardMaterial3D_dlkrj")
radius = 0.9
height = 1.4
radial_segments = 6
rings = 3

[sub_resource type="SphereMesh" id="SphereMesh_w67jj"]
material = SubResource("StandardMaterial3D_eprsi")
radius = 0.9
height = 1.852
radial_segments = 6
rings = 3

[node name="Gateway" type="Area3D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_s454h")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
pixel_size = 0.05
texture_filter = 0

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
shape = SubResource("CylinderShape3D_wnbqf")
debug_color = Color(0, 0, 1, 0.25098)
debug_fill = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.7, 0)
material_override = SubResource("StandardMaterial3D_dlkrj")
mesh = SubResource("CylinderMesh_bd4ot")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20.263, 0)
material_override = SubResource("StandardMaterial3D_eprsi")
mesh = SubResource("CylinderMesh_ocwtt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.667861, -1.34125, -0.0707899, 0.22903, 0.0358254, 1.48198, -1.32345, -0.670646, 0.220742, 0, 39.5, 0)
mesh = SubResource("SphereMesh_hec52")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="MeshInstance3D3"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
mesh = SubResource("SphereMesh_w67jj")
skeleton = NodePath("../..")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 39.2609, 0)
light_volumetric_fog_energy = 0.25
spot_range = 42.0168
spot_attenuation = 0.0
spot_angle = 11.0095
spot_angle_attenuation = 1.10957

[connection signal="area_entered" from="." to="." method="area_entered"]
